--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-CCA9RUF;Initial Catalog=shopingCart;Integrated Security=True;"
+    "DefaultConnection": "Data Source=DESKTOP-PKD4MHB;Initial Catalog=shopingCart;Integrated Security=True;"
   }
 }
